kubernetes/observability/open-telemetry/svc-nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-test-svc
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: otel-collector-cluster
  ports:
    - protocol: TCP
      port: 4317
      targetPort: 4317
      nodePort: 31390
